[base] implement api from collection-service
